.. $Id$
.. $Author$
.. $Date$

Release Notes
=============

trunk
-----------------------------

Dec. 20, 2019 Alex Olivas (aolivas@umd.edu)
-------------------------------------------
Combo Release V00-00-00

- Modified Laputop so that it uses the X/Y/Z coordinates of the Tank that was hit 
  using StationGeo information, instead of the coordinates of the DOM inside the tank,
  like 61 or 63, which is off to one side.  Previous functionality can be restored
  using the "OldXYZ" option, which is default False.  "LaputopStandard" traysegment,
  used by L3 processing, has this set to True, so as to reproduce previous L3 results.

- Point to correct test-data, and get rid of I3_PORTS references

June 12, 2018 Kevin Meagher
---------------------------
Release V03-04-04

- Update Examples
- Remove `lib` from library loading
- Fix bug where pulses wern't being stored

December 5, 2017  Kevin Meagher
--------------------------------
Release V03-04-03

- Adding the curvature-only with free parameter fit function with ability to vary A, D, N, and T
- Adding the Emily's curvature fit function
- Fix `StationsVsTanks` tests to use `$I3_TESTDATA` instead of local files
- Add various code comments 
- Remove unused variable `loudestPulse`
- Remove varios pieces of dead code
- Use new printing functinality
- Remove unused ROOT references in CMakeLists.txt
- Scripts cleanup: remove `Finish()` and `TrashCan`
- Remove unused .dox 

April 24, 2017
------------------------
Release V03-04-01

- Removed CINT, and many other minor fixes

  -- several people

- Removed "BadStations" option; it's been replaced with "BadTanks"

  -- Kath Rawlins

- Phased out storage of Params in old "I3TopLateralFitParams".  Now they're 
  stored in new "I3LaputopParams" structure from recclasses, which includes 
  storage of parameter errors.  

  -- Kath Rawlins

- corrected of potential bug of '!' operator not acting on inquation 
  but only leftside argument; please review

  -- Marcel Zoll

