@@ -15,17 +15,7 @@
 
 #include "dataclasses/physics/I3Particle.h"
 #include "toprec/I3SnowCorrectionService.h"
-
-// Helper -- Duplicated from other places
-double DistToAxis(const I3Particle& part,
-                  const I3Position& pos)
-{
-  I3Position v = pos - part.GetPos();
-  const double d_axis = v * part.GetDir();
-  const double ground_r2 = v.Mag2();
-  return sqrt(ground_r2 - d_axis * d_axis);
-}
-
+ 
 // Tolerances
 double tol_tight = 0.0000001;  // For things that should be very tight
 double tol_loose = 0.00001;  // For things that are computed
@@ -41,35 +31,24 @@ TEST(SimpleLambda)
     I3SimpleSnowCorrectionServicePtr serv_simple(new I3SimpleSnowCorrectionService("My simple service", 2.1));
   
     // Create the inputs -- Although these shouldn't matter!
-    const I3Position *pos = new I3Position(200, 100, 1970);  // a made-up location
-    I3Particle *p = new I3Particle(); // a made-up track
-    p->SetPos(10, 20, 1730);   // x, y, z
-    p->SetDir(M_PI/6, M_PI/4);  // zenith=30deg, azimuth=45deg
-    p->SetTime(5000.0);
-    p->SetFitStatus(I3Particle::OK);
-    const I3Particle *pc = new I3Particle(*p);
+    const I3Position *pos = new I3Position(200, 100, 1970);  // a made-up location, which shouldn't matter
+    I3ParticlePtr pc = boost::make_shared<I3Particle>(); // a made-up track, which shouldn't matter
+    pc->SetPos(10, 20, 1730);   // x, y, z
+    pc->SetDir(M_PI/6, M_PI/4);  // zenith=30deg, azimuth=45deg
+    pc->SetTime(5000.0);
+    pc->SetFitStatus(I3Particle::OK);
     double sd = 1.5;  // snow depth in meters
-    I3LaputopParams *par = new I3LaputopParams(); // made-up params (shouldn't matter)
+    I3LaputopParamsPtr par = boost::make_shared<I3LaputopParams>(); // made-up params, which shouldn't matter
     par->SetValue(Laputop::Parameter::Log10_S125, 1.234);
     par->SetValue(Laputop::Parameter::Beta, 3.0);
-    const I3LaputopParams *parc = new I3LaputopParams(*par);
     
     // Test the function itself
-    double attf = serv_simple->AttenuationFactor(*pos, sd, *pc, *parc);
+    double attf = serv_simple->AttenuationFactor(*pos, sd, *pc, *par);
     double expected = exp(-(1.5/cos(M_PI/6))/2.1); // <--- the simple expectation
     ENSURE_DISTANCE(attf, expected, tol_loose);
     // Test the SnowDiagnostics
-    SnowCorrectionDiagnosticsPtr diag(new SnowCorrectionDiagnostics);
-    serv_simple->FillSnowDiagnostics(diag,
-                                     (I3ParticleConstPtr)pc,
-                                     (I3LaputopParamsConstPtr)parc);
-    /*  CRASHING IF RUN TWICE FOR SOME REASON
-    printf("Can it do it twice in a row?\n");
-    serv_simple->FillSnowDiagnostics(diag,
-                                     (I3ParticleConstPtr)pc,
-                                     (I3LaputopParamsConstPtr)parc);
-    printf("Done?\n");
-     */
+    SnowCorrectionDiagnosticsPtr diag = boost::make_shared<SnowCorrectionDiagnostics>();
+    serv_simple->FillSnowDiagnostics(diag, pc, par);
     ENSURE_DISTANCE(diag->tstage, -999, tol_tight);
     ENSURE_DISTANCE(diag->fEM_50m, 1.0, tol_tight);
     ENSURE_DISTANCE(diag->fEM_125m, 1.0, tol_tight);
@@ -78,31 +57,20 @@ TEST(SimpleLambda)
     ENSURE_DISTANCE(diag->lambda_EM_125m, 2.1, tol_tight);
     ENSURE_DISTANCE(diag->lambda_EM_500m, 2.1, tol_tight);
 
-    /*  CRASHING IF RUN TWICE FOR SOME REASON
-     printf("bench4\n");
-
     // Test the reset function, and try it again
     serv_simple->ResetLambda(2.2);
-    printf("bench4.1\n");
-
-    attf = serv_simple->AttenuationFactor(*pos, sd, *pc, *parc);
-    printf("bench4.2\n");
-
+    attf = serv_simple->AttenuationFactor(*pos, sd, *pc, *par);
     double expected2 = exp(-(1.5/cos(M_PI/6))/2.2); // <--- the simple expectation (again)
     ENSURE_DISTANCE(attf, expected2, tol_loose);
-    printf("bench4.3\n");
     // Test the SnowDiagnostics (again)
-    serv_simple->FillSnowDiagnostics(diag,
-                                     (I3ParticleConstPtr)pc,
-                                     (I3LaputopParamsConstPtr)parc);
-    printf("bench4.4\n");
+    serv_simple->FillSnowDiagnostics(diag, pc, par);
     ENSURE_DISTANCE(diag->lambda_EM_50m, 2.2, tol_tight);
     ENSURE_DISTANCE(diag->lambda_EM_125m, 2.2, tol_tight);
     ENSURE_DISTANCE(diag->lambda_EM_500m, 2.2, tol_tight);
-    printf("bench5\n");
-*/
+
     
 }
+
 
 TEST(BORSLambda)
 {
@@ -113,21 +81,19 @@ TEST(BORSLambda)
     
     // Create the inputs
     const I3Position *pos1 = new I3Position(200, 100, 1955);  // a made-up location
-    I3Particle *p = new I3Particle(); // a made-up track
-    p->SetPos(10, 20, 1940);   // x, y, z
-    p->SetDir(M_PI/6, M_PI/4);  // zenith=30deg, azimuth=45deg
-    p->SetTime(5000.0);
-    p->SetFitStatus(I3Particle::OK);
-    const I3Particle *pc = new I3Particle(*p);
+    I3ParticlePtr pc = boost::make_shared<I3Particle>(); // a made-up track
+    pc->SetPos(10, 20, 1940);   // x, y, z
+    pc->SetDir(M_PI/6, M_PI/4);  // zenith=30deg, azimuth=45deg
+    pc->SetTime(5000.0);
+    pc->SetFitStatus(I3Particle::OK);
     double sd = 1.5;  // snow depth in meters
-    I3LaputopParams *par = new I3LaputopParams(); // made-up params (shouldn't matter)
+    I3LaputopParamsPtr par = boost::make_shared<I3LaputopParams>(); // made-up params
     par->SetValue(Laputop::Parameter::Log10_S125, log10(1.234));
     par->SetValue(Laputop::Parameter::Beta, 3.0);
-    const I3LaputopParams *parc = new I3LaputopParams(*par);
     
     // ----- The first one: without any nose: -----
     // Test the function itself: radius from the core
-    double r1 = DistToAxis(*pc, *pos1);
+    double r1 = serv_bors->DistToAxis(*pc, *pos1);
     ENSURE_DISTANCE(r1, 175.96489, tol_loose);
     // Test the helper functions
     double t = serv_bors->T_from_beta_zenith(3.0, M_PI/6);
@@ -137,7 +103,7 @@ TEST(BORSLambda)
     double fEM = serv_bors->FractionEM(r1, log10(1.234));
     ENSURE_DISTANCE(fEM, 0.71524146, tol_loose);
     // Test the conversion into an attenuation factor
-    double attf = serv_bors->AttenuationFactor(*pos1, sd, *pc, *parc);
+    double attf = serv_bors->AttenuationFactor(*pos1, sd, *pc, *par);
     /*
     double s = -0.44342656;
     double fEM = 0.71524146;
@@ -148,12 +114,9 @@ TEST(BORSLambda)
     */
     ENSURE_DISTANCE(attf, 0.616575, tol_loose);
     
-    /* THIS MESSES EVERYTHING UP FOR SOME REASON
     // Test the SnowDiagnostics
-    SnowCorrectionDiagnosticsPtr diag(new SnowCorrectionDiagnostics);
-    serv_bors->FillSnowDiagnostics(diag, pc, parc);
-                                    // (I3ParticleConstPtr)pc,
-                                    // (I3LaputopParamsConstPtr)parc);
+    SnowCorrectionDiagnosticsPtr diag = boost::make_shared<SnowCorrectionDiagnostics>();
+    serv_bors->FillSnowDiagnostics(diag, pc, par);
     ENSURE_DISTANCE(diag->tstage, 5.6936828, tol_loose);
     ENSURE_DISTANCE(diag->tstage_restricted, 5.6936828, tol_loose);
     ENSURE_DISTANCE(diag->fEM_50m, 0.96456282, tol_loose);
@@ -163,13 +126,12 @@ TEST(BORSLambda)
     ENSURE_DISTANCE(diag->lambda_EM_125m, 2.346119, tol_loose);
     ENSURE_DISTANCE(diag->lambda_EM_500m, 2.016437, tol_loose);
     printf("Try this: should be NAN: snowdepth_39B = %f\n", diag->snowdepth_39B);
-     */
     
     //  ----- A second one, with the nose -------
     // For a different distance, just for testing...
     const I3Position *pos2 = new I3Position(20, 40, 1955);  // move it closer
     // Test the function itself: radius from the core
-    double r2 = DistToAxis(*pc, *pos2);
+    double r2 = serv_bors->DistToAxis(*pc, *pos2);
     ENSURE_DISTANCE(r2, 12.968516, tol_loose);
     // Test the function itself: three functions
     double c0 = serv_bors->Turnover_c0(r2, t);
@@ -181,7 +143,7 @@ TEST(BORSLambda)
     double fEM2 = serv_bors->FractionEM(r2, log10(1.234));
     ENSURE_DISTANCE(fEM2, 0.99384928, tol_loose);
     // Test the conversion into an attenuation factor (again)
-    double attf2 = serv_bors->AttenuationFactor(*pos2, sd, *pc, *parc);
+    double attf2 = serv_bors->AttenuationFactor(*pos2, sd, *pc, *par);
     /*
     double c0 = 1.7383789;
     double snose = -0.57577607;
@@ -194,11 +156,8 @@ TEST(BORSLambda)
     */
     ENSURE_DISTANCE(attf2, 0.741269, tol_loose);
     // Test the SnowDiagnostics (again)
-    /* CRASHES WHEN RUN TWICE... WHY??
-    serv_bors->FillSnowDiagnostics(diag,
-                                     (I3ParticleConstPtr)pc,
-                                     (I3LaputopParamsConstPtr)parc);
-    // These are the same as before (depends on shower)...
+    serv_bors->FillSnowDiagnostics(diag, pc, par);
+    // These are the same as before (since depends on shower, not tank)...
     ENSURE_DISTANCE(diag->tstage, 5.69368, tol_loose);
     ENSURE_DISTANCE(diag->tstage_restricted, 5.69368, tol_loose);
     ENSURE_DISTANCE(diag->fEM_50m, 0.964562, tol_loose);
@@ -207,7 +166,7 @@ TEST(BORSLambda)
     ENSURE_DISTANCE(diag->lambda_EM_50m, 2.63037, tol_loose);
     ENSURE_DISTANCE(diag->lambda_EM_125m, 2.346119, tol_loose);
     ENSURE_DISTANCE(diag->lambda_EM_500m, 2.016437, tol_loose);
-*/
+
 }
 
 TEST(RadeBasicLambda)
@@ -219,33 +178,29 @@ TEST(RadeBasicLambda)
     
     // Create the inputs
     const I3Position *pos = new I3Position(200, 100, 1970);  // a made-up location
-    I3Particle *p = new I3Particle(); // a made-up track
-    p->SetPos(10, 20, 1730);   // x, y, z
-    p->SetDir(M_PI/6, M_PI/4);  // zenith=30deg, azimuth=45deg
-    p->SetTime(5000.0);
-    p->SetFitStatus(I3Particle::OK);
-    const I3Particle *pc = new I3Particle(*p);
+    I3ParticlePtr pc = boost::make_shared<I3Particle>(); // a made-up track
+    pc->SetPos(10, 20, 1730);   // x, y, z
+    pc->SetDir(M_PI/6, M_PI/4);  // zenith=30deg, azimuth=45deg
+    pc->SetTime(5000.0);
+    pc->SetFitStatus(I3Particle::OK);
     double sd = 1.5;  // snow depth in meters
-    I3LaputopParams *par = new I3LaputopParams(); // made-up params (shouldn't matter)
+    I3LaputopParamsPtr par = boost::make_shared<I3LaputopParams>(); // made-up params (shouldn't matter)
     par->SetValue(Laputop::Parameter::Log10_S125, log10(1.234));
     par->SetValue(Laputop::Parameter::Beta, 3.0);
-    const I3LaputopParams *parc = new I3LaputopParams(*par);
     
     // Test the function itself: radius from the core
-    double r = DistToAxis(*pc, *pos);
+    double r = serv_rade->DistToAxis(*pc, *pos);
     ENSURE_DISTANCE(r, 90.03203, tol_loose);
     // Test the function itself: lambda
     double l = serv_rade->Lambda(r, 1.234);
     ENSURE_DISTANCE(l, 2.29008, tol_loose);
     // Test the conversion into an attenuation factor
-    double attf = serv_rade->AttenuationFactor(*pos, sd, *pc, *parc);
+    double attf = serv_rade->AttenuationFactor(*pos, sd, *pc, *par);
     double expected = exp(-(1.5/cos(M_PI/6))/l); // <--- the expectation
     ENSURE_DISTANCE(attf, expected, tol_loose);
     // Test the SnowDiagnostics
-    SnowCorrectionDiagnosticsPtr diag(new SnowCorrectionDiagnostics);
-    serv_rade->FillSnowDiagnostics(diag,
-                                     (I3ParticleConstPtr)pc,
-                                     (I3LaputopParamsConstPtr)parc);
+    SnowCorrectionDiagnosticsPtr diag = boost::make_shared<SnowCorrectionDiagnostics>();
+    serv_rade->FillSnowDiagnostics(diag, pc, par);
     ENSURE_DISTANCE(diag->tstage, -999, tol_tight);
     ENSURE_DISTANCE(diag->fEM_50m, 1.0, tol_tight);
     ENSURE_DISTANCE(diag->fEM_125m, 1.0, tol_tight);
